--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
-	<h1>Background Generator</h1>
+	<h1>THE BEST Background Generator</h1>
 	<input class="color1" type="color" name="color1" value="#d13fd3">
 	<input class="color2" type="color" name="color2" value="#e19719">
 	<h2>Current CSS Background</h2>
