--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>Background Generator</h1>
 	<input class="color1" type="color" name="color1" value="#d13fd3">
 	<input class="color2" type="color" name="color2" value="#e19719">
-	<h2>Current CSS Background</h2>
+	<h2>Current CSS Background can be found here, donch u know</h2>
 	<h3></h3>
 	
 	<script type="text/javascript" src="script.js"></script>
